Fixes #12 (for good... is what I hope)
Multiline StaticText is now divided into multiple items on export.

Multiline EditText still follows the same idea where it just kinda tries real hard to please but text may end up being too big or too small for the text...

--- a/source/assets/_sass/panels/4-dialog-preview.scss
+++ b/source/assets/_sass/panels/4-dialog-preview.scss
@@ -370,11 +370,6 @@
     display: flex;
   }
   
-  // #U7FTZMRVYxVqiArfdgQeQjMRpx6R → set.values.js
-  .text-container.multiline {
-    width: 100%;
-    text-align: left;
-  }
   .static-text,
   .edit-text > span {
     display: inline-block;
@@ -412,17 +407,18 @@
     .text-container {
     	// color: yellow !important;
       font-size: 12.5px;
-      word-spacing: 1.7px;
-      letter-spacing: 0.62px;
+      word-spacing: 1.4px;
+      letter-spacing: 0.58px;
       line-height: 15px;
       font-weight: 300;
+      vertical-align: top !important;
     }
 		> span {
       cursor: text;
       overflow: auto;
       width: 100%;
       height: 100%;
-      padding: 3px 10px;
+      padding: 1px 7px;
       background: darken($color-bg,7);
       border: 1px solid lighten($color-bg,7);
       border-radius: 4px;
